Se ajustan detalles de funcionamiento

--- a/src/app/features/tasks/pages/tasks.page.html
+++ b/src/app/features/tasks/pages/tasks.page.html
@@ -1,19 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Mis Tareas
-    </ion-title>
+<ion-header>
+  <ion-toolbar mode="ios" class="white-header">
+    <ion-title>Mis Tareas</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="syncTasks()" [disabled]="!isOnline">
         <ion-icon slot="icon-only" name="sync-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-  </ion-toolbar>
-  <ion-toolbar *ngIf="!isOnline">
-    <ion-item lines="none" color="warning">
-      <ion-icon name="cloud-offline-outline" slot="start"></ion-icon>
-      <ion-label>Modo Offline</ion-label>
-    </ion-item>
+    <ion-toolbar *ngIf="!isOnline">
+      <ion-item lines="none" color="warning">
+        <ion-icon name="cloud-offline-outline" slot="start"></ion-icon>
+        <ion-label>Modo Offline</ion-label>
+      </ion-item>
+    </ion-toolbar>
   </ion-toolbar>
 </ion-header>
 
@@ -37,25 +35,19 @@
         </ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <app-task-form 
-          [task]="editingTask"
-          (formSubmit)="onCreateTask($event)"
-          (formCancel)="onHideForm()">
+        <app-task-form [task]="editingTask" (formSubmit)="onCreateTask($event)" (formCancel)="onHideForm()">
         </app-task-form>
       </ion-card-content>
     </ion-card>
 
     <!-- Lista de tareas -->
-    <app-task-list 
-      [tasks]="tasks"
-      (taskToggle)="onToggleTask($event)"
-      (taskEdit)="onEditTask($event)"
+    <app-task-list [tasks]="tasks" (taskToggle)="onToggleTask($event)" (taskEdit)="onEditTask($event)"
       (taskDelete)="onDeleteTask($event)">
     </app-task-list>
   </div>
 
   <!-- Botón flotante para agregar tarea -->
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed" *ngIf="!showForm">
+  <ion-fab vertical="end" horizontal="end" slot="fixed" *ngIf="!showForm">
     <ion-fab-button (click)="onShowForm()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
