--- a/src/app/features/tasks/pages/tasks.page.scss
+++ b/src/app/features/tasks/pages/tasks.page.scss
@@ -6,6 +6,53 @@ ion-card {
   margin-bottom: 16px;
 }
 
+ion-fab {
+  // Ajustar posición del botón flotante
+  &[vertical="top"] {
+    top: 80px; // Debajo del header
+  }
+  
+  &[vertical="end"] {
+    bottom: calc(16px + 5px); // Margen inferior + 5px adicional
+  }
+  
+  &[horizontal="end"] {
+    right: 16px; // Margen desde el borde derecho
+  }
+}
+
 ion-fab-button {
   --background: var(--ion-color-primary);
+  --box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+  
+  // Animación al hacer hover (web)
+  &:hover {
+    --box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+    transform: scale(1.05);
+  }
+}
+
+ion-header {
+  ion-toolbar {
+    &.white-header {
+      --background: #ffffff;
+      --color: var(--ion-color-dark);
+      box-shadow: 0px 4px 14px rgba(166, 179, 194, 0.3);
+      padding-top: env(safe-area-inset-top);
+
+      ion-back-button {
+        color: var(--ion-color-medium-shade) !important;
+
+        &::part(native) {
+          width: 40px;
+        }
+      }
+    }
+
+    ion-title {
+      color: var(--ion-color-dark);
+      font-size: 18px;
+      font-weight: 500;
+    }
+  }
 }
